change paths of imgs

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>Experiencia</p>
             <div class="adidas-desktop">
                 <div style="display: flex; align-items: center;">
-                    <img src="/assets/adidas.svg" alt="adidas">
+                    <img src="./assets/adidas.svg" alt="adidas">
                     <div class="date">
                         <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
                         <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
@@ -68,7 +68,7 @@
             </div>
             <div class="adidas-desktop">
                 <div style="display: flex; align-items: center;">
-                    <img src="/assets/adidas.svg" alt="">
+                    <img src="./assets/adidas.svg" alt="">
                     <div class="date">
                         <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
                         <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
@@ -82,7 +82,7 @@
             </div>
             <div class="adidas-desktop">
                 <div style="display: flex; align-items: center;">
-                    <img src="/assets/adidas.svg" alt="">
+                    <img src="./assets/adidas.svg" alt="">
                     <div class="date">
                         <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
                         <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
@@ -143,7 +143,7 @@
 
         <section class="only-mobile container">
             <div style="display: flex; flex-direction: column;">
-                <img src="/assets/develop1.png" alt="develop1">
+                <img src="./assets/develop1.png" alt="develop1">
                 <span class="tags">#HTML #CSS #responsive</span>
             </div>
             <div class="description">
@@ -159,7 +159,7 @@
             </div>
         </section>
         <section id="develop" class="only-desktop container">
-            <img class="develop-img" src="/assets/develop1.png" alt="develop1">
+            <img class="develop-img" src="./assets/develop1.png" alt="develop1">
             <div class="description">
                 <span class="tags">#HTML #CSS #responsive</span>
                 <p id="title">Título</p>
@@ -174,7 +174,7 @@
             </div>
         </section>
         <section id="develop" class="only-desktop container">
-            <img class="develop-img" src="/assets/develop1.png" alt="develop1">
+            <img class="develop-img" src="./assets/develop1.png" alt="develop1">
             <div class="description">
                 <span class="tags">#HTML #CSS #responsive</span>
                 <p id="title">Título</p>
@@ -189,7 +189,7 @@
             </div>
         </section>
         <section id="develop" class="only-desktop container">
-            <img class="develop-img" src="/assets/develop1.png" alt="develop1">
+            <img class="develop-img" src="./assets/develop1.png" alt="develop1">
             <div class="description">
                 <span class="tags">#HTML #CSS #responsive</span>
                 <p id="title">Título</p>
@@ -209,7 +209,7 @@
         <p>Experiencia</p>
         <div class="adidas">
             <div class="date">
-                <img src="/assets/adidas.svg" alt="">
+                <img src="./assets/adidas.svg" alt="">
                 <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
                 <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
             </div>
@@ -222,7 +222,7 @@
 
     <section id="certificate">
         <p id="title">Certificados</p>
-        <img src="/assets/certif.png" alt="certificate"><br>
+        <img src="./assets/certif.png" alt="certificate"><br>
         <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
         <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
     </section>
@@ -231,19 +231,19 @@
         <p id="title">Certificados</p>
         <div class="certificates">
             <div>
-                <img style="height: 60%;" src="/assets/certif.png" alt="certificate"><br>
+                <img style="height: 60%;" src="./assets/certif.png" alt="certificate"><br>
                 <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
                 <p class="only-desktop" style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad
                 </p>
             </div>
             <div style="margin-left: 20px;">
-                <img style="height: 60%;" src="/assets/certif.png" alt="certificate"><br>
+                <img style="height: 60%;" src="./assets/certif.png" alt="certificate"><br>
                 <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
                 <p class="only-desktop" style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad
                 </p>
             </div>
             <div style="margin-left: 20px;">
-                <img style="height: 60%;" src="/assets/certif.png" alt="certificate"><br>
+                <img style="height: 60%;" src="./assets/certif.png" alt="certificate"><br>
                 <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
                 <p class="only-desktop" style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad
                 </p>
