--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>Experiencia</p>
             <div class="adidas-desktop">
                 <div style="display: flex; align-items: center;">
-                    <img src="./assets/adidas.svg" alt="adidas">
+                    <img src="../Guillermo-Gutierrez-entrega01/assets/adidas.svg" alt="adidas">
                     <div class="date">
                         <p style="font-size: 14px; font-weight: 500; color: #828282">Feb 2022 - Actualidad</p>
                         <span style="font-size: 16px; font-weight: 500;">Front-end Developer</span>
